--- a/public/css/libs.css
+++ b/public/css/libs.css
@@ -9057,7 +9057,7 @@ table {
 {
     color: #000;
 }
-#Container .mix{
+#Container2 .mix{
     display: none;
 }
 .menu-restaurant{
@@ -9166,6 +9166,13 @@ table {
     color: #fff;
     text-transform: uppercase;
     margin: 0 5px;
+}
+/*******
+my styling
+ */
+.btn-style{
+    background: transparent;
+    border-color: #FFB03B;
 }
 @media (min-width: 768px) and (max-width: 980px) {
     .content-holder h2 {
